--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -5,18 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomePageActivity"
-    tools:viewBindingIgnore="true">
+    tools:viewBindingIgnore="true"
+    android:background="@drawable/background_gradient">
 
     <GridLayout
+        android:id="@+id/gridLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:drawable/menuitem_background"
+        android:backgroundTint="@color/cardview_shadow_end_color"
+        android:backgroundTintMode="add"
         android:columnCount="2"
+        android:hapticFeedbackEnabled="false"
         android:rowCount="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/homeCard1"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -27,8 +33,8 @@
             android:layout_margin="10dp"
             android:clickable="true"
             app:cardCornerRadius="20dp"
-            app:cardElevation="28dp">
-
+            app:cardElevation="4dp"
+            app:cardBackgroundColor="@color/black">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
@@ -54,9 +60,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView4" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/homeCard2"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -67,7 +73,8 @@
             android:layout_margin="10dp"
             android:clickable="true"
             app:cardCornerRadius="20dp"
-            app:cardElevation="28dp">
+            app:cardElevation="4dp"
+            app:cardBackgroundColor="@color/black">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout2"
@@ -95,9 +102,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView6" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/homeCard3"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -108,7 +115,8 @@
             android:layout_margin="10dp"
             android:clickable="true"
             app:cardCornerRadius="20dp"
-            app:cardElevation="28dp">
+            app:cardElevation="4dp"
+            app:cardBackgroundColor="@color/black">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -133,9 +141,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView7" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/homeCard4"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -146,7 +154,8 @@
             android:layout_margin="10dp"
             android:clickable="true"
             app:cardCornerRadius="20dp"
-            app:cardElevation="28dp">
+            app:cardElevation="4dp"
+            app:cardBackgroundColor="@color/black">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -171,6 +180,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView8" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
     </GridLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="124dp"
+        android:layout_height="52dp"
+        android:text="Close"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
+        app:layout_constraintVertical_bias="0.933" />
 </androidx.constraintlayout.widget.ConstraintLayout>
