**BIG** **Added model selection cube/highlight on doubleTap**

--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -7,154 +7,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LiveViewActivity"
+    tools:context=".LiveViewActivity">
 
-    >
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-
-
-    <!--Viewport fragment (AR fragment)-->
-
-    <!--Catalogue fragment-->
-
-    <io.github.sceneview.ar.ARSceneView
-        android:id="@+id/sceneViewLive"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAlignment="center" />
+        android:layout_height="match_parent">
 
 
-<!--    <Button-->
-<!--        android:id="@+id/btnRemove"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="32dp"-->
-<!--        android:layout_marginBottom="32dp"-->
-<!--        android:text="Remove all"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/catalogueFragment"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.951"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.051" />-->
 
-    <FrameLayout
-        android:id="@+id/loadingView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#40000000"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="gone">
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            app:indicatorSize="64dp"
-            app:trackColor="#3FFFFFFF" />
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/instructionText"
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:layout_marginTop="44dp"
-        android:text="Point the phone at an empty space"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <!--Viewport fragment (AR fragment)-->
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/my_composable"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/instructionText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"/>
 
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/imgBtnCatOpen"-->
-<!--        android:layout_width="70dp"-->
-<!--        android:layout_height="73dp"-->
-<!--        android:background="@null"-->
-<!--        android:rotation="90"-->
-<!--        android:scaleType="fitCenter"-->
-<!--        android:visibility="visible"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.897"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.975"-->
-<!--        app:srcCompat="@drawable/cat_arrow" />-->
 
-    <Button
-        android:id="@+id/btnBack"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:text="Back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/catalogueFragment"
-        android:layout_width="match_parent"
-        android:layout_height="340dp"
-        android:background="#667AFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-
-        tools:visibility="visible" />
-
-    <ImageButton
-        android:id="@+id/imgBtnCatClose"
-        android:layout_width="70dp"
-        android:layout_height="73dp"
-        android:background="@null"
-        android:rotation="270"
-        android:scaleType="fitCenter"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571"
-        app:srcCompat="@drawable/cat_arrow" />
-
-<!--    <Button-->
-<!--        android:id="@+id/btnDepth"-->
-<!--        android:layout_width="122dp"-->
-<!--        android:layout_height="64dp"-->
-<!--        android:text="Depth"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/imgBtnCatOpen"-->
-<!--        app:layout_constraintHorizontal_bias="0.375"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/btnBack"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.976" />-->
+            <io.github.sceneview.ar.ARSceneView
+                android:id="@+id/sceneViewLive"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center" />
 
 
 
 
+        <FrameLayout
+            android:id="@+id/loadingView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#40000000"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone">
 
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                app:indicatorSize="64dp"
+                app:trackColor="#3FFFFFFF" />
 
+        </FrameLayout>
 
+        <TextView
+            android:id="@+id/instructionText"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginTop="44dp"
+            android:text="Point the phone at an empty space"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:text="Back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.976" />
 
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/catalogueFragment"
+            android:layout_width="match_parent"
+            android:layout_height="340dp"
+            android:background="#667AFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
 
+            tools:visibility="visible" />
 
+        <ImageButton
+            android:id="@+id/imgBtnCatClose"
+            android:layout_width="70dp"
+            android:layout_height="73dp"
+            android:background="@null"
+            android:rotation="270"
+            android:scaleType="fitCenter"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.897"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.571"
+            app:srcCompat="@drawable/cat_arrow" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
