Added calc distance between two selected anchors

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,4 +10,7 @@
     <item android:id="@+id/btnThree"
         android:title="@string/btnRemoveAll" />
 
+    <item android:id="@+id/btnFour"
+        android:title="@string/btnMeasure" />
+
 </menu>
