Added changes to saving anchors
-Anchors now save with user data
-Added recyclerView to display saved anchors of specific user (Not complete)

--- a/app/src/main/res/layout/activity_load_saved_layouts.xml
+++ b/app/src/main/res/layout/activity_load_saved_layouts.xml
@@ -7,4 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".activities.LoadSavedLayoutsActivity">
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Load your Layouts!"
+        android:textColor="@color/avanteRed"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recView"
+        android:layout_width="409dp"
+        android:layout_height="657dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.5"
+        tools:listitem="@layout/saved_layouts_recyclerview"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
